# alpaca-finance-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
src/: account.rs  alpaca.rs  error.rs  lib.rs  order.rs  streaming.rs  util.rs
tests/: account.rs  common.rs  order.rs  streaming.rs
tests/account_data/: corrupted.json  valid.json
tests/order_data/: valid_open.json
tests/streaming_data/: fill.hbs  order.json
