[package]
name = "alpaca-finance"
version = "0.2.0"
authors = [ "Fred Briden <fred.briden@gmail.com>" ]
license = "MIT"
description = "An API to interact with alpaca.markets"
keywords = [ "alpaca", "finance", "stocks" ]
readme = "README.md"
edition = "2018"

include = [ "Cargo.toml", "LICENSE", "README.md", "src/**/*.rs" ]

repository = "https://github.com/fbriden/alpaca-finance-rs"
homepage = "https://github.com/fbriden/alpaca-finance-rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
market-finance = { version = "0.1" }
reqwest = { version = "0.10", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.6"
tokio = { version = "0.2", default-features = false, features = [ "rt-threaded", "macros" ]}
tokio-tungstenite = { version = "0.10", features = [ "tls" ] }
tungstenite = "0.10"
url = "2.1"

[dev-dependencies]
handlebars = "3.0"
mockito = "0.25"
tokio-test = "0.2"